# StationDemoProject

./: .gitignore  CHANGELOG.md  README.md  build.sh  deployApplication.bat  docker-compose.yml  external_gen.sh  pom.xml  settings.xml
StationDemoBatch/: pom.xml
StationDemoService/: pom.xml
StationDemoWeb/: pom.xml
application/: README.md  pom.xml
database_station/: createDockerImageStationDb.sh
docker_station/: README.md  docker-compose.yml  startPortainer.sh
helm/: consultPod.sh  consultService.sh  logPodStationBack.sh
jenkins/: Jenkinsfile
kubernates/: startBack.sh  startFront.sh
kubernetes/: awsvalue.yaml  deleteAwsStationChart.sh  deleteStationChart.sh  driver.yaml  launchAwsStationChart.sh  launchStationChart.sh  stopBack.sh  stopFront.sh
kubernetesonprem/: cadvisor_sm.yaml  deleteStation.sh  launchMinikube.bat  launchStation.sh  stationdevread.hcl
loadTest/python3/: .env  install.sh  installWithUv.bat  launch.sh  pyproject.toml  requirements.txt  setup.py
loadTest/python3/loadtest/: __main__.py  cli.py  config.properties  test.properties
loadTest/python3/loadtest/utils/: prometheus.py  test.properties
loadTest/python3/loadtest/utils/k6/: data.txt  k6.py  script.js
openshift/: launchOpenshiftLocal.sh
schema/: StationDemoWeb.pptx
settings/: settings.xml
terraform/: delete.sh  deleteNetworks.sh  gener.sh  generateNetworks.sh  main.tf  vars.tf
terraformaws/: README.md  assume_role.sh  bouche.sh  deleteEc2Sample.sh  deleteNetworks.sh  deleteecs.sh  deleteecsec2.sh  deleteecsfargate.sh  generateEc2Sample.sh  generateNetworks.sh  (+3 more)
(+993 files in other folders)
